deploy/kubernetes/manifests/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-demoapp
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: dotnet-demoapp
