deploy/kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dotnet-demoapp
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts: 
      - demo.kube.benco.io
      secretName: kube-benco-io-cert
  rules:
    - host: demo.kube.benco.io
      http:
        paths:
          - path: /
            backend:
              serviceName: dotnet-demoapp
              servicePort: 80
